# lunar-bundler

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml
demo/: bundle.lua  bundle.lua.map  lunar_bundler.toml  main.lua
demo/src/: config.lua  greeter.lua  utils.lua
src/: bundler.rs  compat.rs  config.rs  emitter.rs  error.rs  graph.rs  lib.rs  loader.rs  luarocks.rs  main.rs  minify.rs  preprocessor.rs  resolver.rs  sandbox.rs  scanner.rs  sourcemap.rs  treeshake.rs
tests/: integration.rs
tests/fixtures/diamond/: a.lua  b.lua  c.lua  main.lua
tests/fixtures/lua55/: main.lua
tests/fixtures/luarocks/: main.lua
tests/fixtures/moonscript/: greeting.moon  main.lua  utils.lua
tests/fixtures/nested/: main.lua
tests/fixtures/nested/lib/: init.lua
tests/fixtures/simple/: foo.lua  main.lua
