[package]
name = "lunar-bundler"
version = "0.2.0"
edition = "2024"
description = "A Lua bundler that resolves require() calls into a single file"
license = "Apache-2.0"
repository = "https://github.com/colourlabs/lunar-bundler"
readme = "README.md"
keywords = ["lua", "bundler", "build-tool"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
full_moon = { git = "https://github.com/wez/full-moon", branch = "lua55", features = ["lua54", "lua53", "lua52", "lua55"] }
owo-colors = "4.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
walkdir = "2.5.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
